--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,1 @@
-Redirect /custom-extensions/is/ /custom-extensions/98387150/
+Redirect /custom-extensions/is/ http://clproject.github.io/custom-extensions/98387150/
