--- a/.htaccess
+++ b/.htaccess
@@ -1,1 +1,1 @@
-Redirect 301 /custom-extensions/is/ http://clproject.github.io/custom-extensions/98387150/
+redirect /custom-extensions/is/ http://clproject.github.io/custom-extensions/98387150/
