--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine on
 RewriteCond %{HTTP_HOST} ^clproject.github.io[nc]
-RewriteRule ^(.*)$ http://www.clproject.github.io/$1 [r=301,nc]
+RewriteRule ^(.*)$ http://clproject.github.io/$1 [r=301,nc]
 
 //301 Redirect Entire Directory
 RedirectMatch 301 /custom-extensions/is/(.*) /custom-extensions/98387150/$1
