--- a/.htaccess
+++ b/.htaccess
@@ -15,3 +15,7 @@ ErrorDocument 500 500.html
  
 // XHTML index
 DirectoryIndex index.xhtml
+RewriteEngine on
+RewriteCond %{HTTPS} !on
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI}
+
